Add basic css styles

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,20 @@
 html {
   box-sizing: border-box;
+  background-color: #f2f2f2;
+  font-family: Georgia, seif;
+  line-height: 1.5;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
+}
+
+.cards {
+  display: inline-block;
+  margin: 0 .5em 1em;
+  max-wodth: 20em;
+  padding: 1em;
+  background-color: #fff;
+  border: 3px solid #e2e2e2;
+  border-radius: 10px;
 }
