--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 html {
   box-sizing: border-box;
   background-color: #f2f2f2;
-  font-family: Georgia, seif;
+  font-family: Georgia, serif;
   line-height: 1.5;
 }
 
@@ -47,7 +47,6 @@ html {
   width: 6em;
   font-style: italic;
 }
-
 
 .cards dd {
   display: inline-block;
